--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -7,12 +7,13 @@
     android:layout_height="match_parent"
     tools:context=".LoginActivity"
     android:orientation="vertical"
-    android:gravity="center">
+    android:gravity="center"
+    android:backgroundTint="@color/white">
 
     <ImageView
         android:layout_width="200dp"
         android:layout_height="200dp"
-        android:src="images/logo.png"
+        android:src="@drawable/logo.png"
         android:layout_gravity="center"/>
 
     <TextView
@@ -32,41 +33,18 @@
         android:hint="Usuario"
         android:textColorHint="@color/black"
         android:textColor="@color/black"
-        android:backgroundTint="@color/black"
+        android:backgroundTint="@color/white"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"/>
 
-    <EditText
-        android:id="@+id/editTextPassword"
-        android:layout_width="300dp"
-        android:layout_height="70dp"
-        android:hint="Contraseña"
-        android:inputType="textPassword"
-        android:textColorHint="@color/black"
-        android:textColor="@color/black"
-        android:backgroundTint="@color/white"
-        android:layout_marginBottom="16dp"/>
-
     <Button
-        android:id="@+id/buttonLogin"
+        android:id="@+id/buttonEMPEZAR"
         android:layout_width="330dp"
         android:layout_height="70dp"
-        android:text="INICIAR SESIÓN"
+        android:text="EMPEZAR"
         android:layout_marginTop="0dp"
         android:layout_marginBottom="16dp"
  />
 
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="¿No tienes cuenta? Registrate"
-        android:textColor="@color/black"/>
-
-    <Button
-        android:id="@+id/registrarseButton"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:text="Registrarse"
-        android:layout_marginBottom="8dp" />
 </LinearLayout>
