--- a/app/src/main/res/layout/inicio.xml
+++ b/app/src/main/res/layout/inicio.xml
@@ -18,7 +18,8 @@
         android:layout_height="100dp"
         android:id="@+id/imagenPrincipiante"
         android:layout_above="@id/botonPrincipiante"
-        android:layout_centerHorizontal="true">
+        android:layout_centerHorizontal="true"
+        app:srcCompat="@drawable/Principiante">
     </ImageView>
 
     <Button
@@ -37,7 +38,8 @@
         android:layout_height="100dp"
         android:id="@+id/imagenIntermedio"
         android:layout_above="@id/botonIntermedio"
-        android:layout_centerHorizontal="true">
+        android:layout_centerHorizontal="true"
+        app:srcCompat="@drawable/Intermedio">
     </ImageView>
     <Button
         android:layout_marginTop="20dp"
@@ -55,6 +57,7 @@
         android:id="@+id/imagenAvanzado"
         android:layout_above="@id/botonAvanzado"
         android:layout_centerHorizontal="true"
+        app:srcCompat="@drawable/Avanzado"
         >
     </ImageView>
     <Button
