--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -21,13 +21,13 @@
             android:scaleType="centerCrop"
             android:layout_marginStart="10dp"
             android:layout_marginBottom="10dp"
-            android:layout_marginTop="10dp"
-           />
+            android:layout_marginTop="10dp" />
         <TextView
             android:layout_width="120dp"
             android:layout_height="30dp"
             android:id="@+id/listName"
-            android:text="Ejer1"
+            android:text="Name"
+            android:textColor="@color/lavender"
             android:textSize="20sp"
             android:layout_marginTop="25dp"
             android:layout_marginStart="30dp"
@@ -36,11 +36,11 @@
             android:layout_width="80dp"
             android:layout_height="30dp"
             android:id="@+id/listTime"
-            android:text="Repeticiones"
+            android:text="time"
             android:textSize="16sp"
             android:layout_toEndOf="@id/listName"
             android:layout_marginTop="25dp"
             android:layout_marginStart="100dp"
-           />
+            android:textColor="@color/lavender"/>
     </RelativeLayout>
 </androidx.cardview.widget.CardView>
