--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -13,7 +13,7 @@
     <ImageView
         android:layout_width="200dp"
         android:layout_height="200dp"
-        android:src="@drawable/logo.png"
+        android:src="@drawable/torch"
         android:layout_gravity="center"/>
 
     <TextView
@@ -36,7 +36,16 @@
         android:backgroundTint="@color/white"
         android:layout_marginTop="16dp"
         android:layout_marginBottom="16dp"/>
-
+    <EditText
+        android:id="@+id/editContrasena"
+        android:layout_width="300dp"
+        android:layout_height="70dp"
+        android:hint="Usuario"
+        android:textColorHint="@color/black"
+        android:textColor="@color/black"
+        android:backgroundTint="@color/white"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp"/>
     <Button
         android:id="@+id/buttonEMPEZAR"
         android:layout_width="330dp"
@@ -45,6 +54,20 @@
         android:layout_marginTop="0dp"
         android:layout_marginBottom="16dp"
  />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="¿No tienes contrasena? Registrate"
+        android:layout_marginBottom="20dp"></TextView>
+    <Button
+        android:id="@+id/buttonRegistrar"
+        android:layout_width="330dp"
+        android:layout_height="70dp"
+        android:text="REGISTRARSE"
+        android:layout_marginTop="0dp"
+        android:layout_marginBottom="16dp"
+        />
+
 
 
 </LinearLayout>
