--- a/app/src/main/res/layout/registro.xml
+++ b/app/src/main/res/layout/registro.xml
@@ -13,7 +13,7 @@
         android:layout_height="150dp"
         android:layout_gravity="center"
         android:layout_marginTop="20dp"
-        android:src="@drawable/menelaoKINO"/>
+        android:src="@drawable/menelaokino"/>
 
     <TextView
         android:layout_width="wrap_content"
