--- a/app/src/main/res/layout/rutina.xml
+++ b/app/src/main/res/layout/rutina.xml
@@ -17,7 +17,7 @@
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:id="@+id/listImage"
-            android:src="@drawable/Principiante"
+            android:src="@drawable/principiante"
             android:scaleType="centerCrop"
             android:layout_marginStart="10dp"
             android:layout_marginBottom="10dp"
