--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -53,6 +53,7 @@
         android:text="EMPEZAR"
         android:layout_marginTop="0dp"
         android:layout_marginBottom="16dp"
+        android:onClick="btnEmpezar"
  />
     <TextView
         android:layout_width="wrap_content"
