--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -35,7 +35,7 @@
         <TextView
             android:layout_width="80dp"
             android:layout_height="30dp"
-            android:id="@+id/listTime"
+            android:id="@+id/listrepeticiones"
             android:text="time"
             android:textSize="16sp"
             android:layout_toEndOf="@id/listName"
