--- a/app/src/main/res/layout/recycler.xml
+++ b/app/src/main/res/layout/recycler.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ListadoUsuariosActivity">
+    tools:context=".ListadoEjercicios">
 
 
     <ScrollView
@@ -14,7 +14,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/listado_btn_volver">
+>
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/listado_recyclerView"
