creacion menú con algunos errores

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -7,5 +7,7 @@
 
     <style name="Theme.FitnessCoach" parent="Base.Theme.FitnessCoach">
         <item name="font">@font/greek</item>
+        <item name="windowActionBar">false</item>
+        <item name="android:windowNoTitle">true</item>
     </style>
 </resources>
