--- a/app/src/main/res/layout/recycler.xml
+++ b/app/src/main/res/layout/recycler.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ListadoEjercicios">
+    tools:context=".ListadoEjercicios"
+    >
 
 
     <ScrollView
@@ -22,5 +23,22 @@
             android:layout_height="wrap_content" />
 
     </ScrollView>
-
+    <?xml version="1.0" encoding="utf-8"?>
+    <androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        xmlns:tools="http://schemas.android.com/tools"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:id="@+id/drawer_layout"
+        tools:openDrawer="start">
+        <include layout="@layout/app_bar_main"
+            android:layout_height="match_parent"
+            android:layout_width="match_parent"/>
+        <com.google.android.material.navigation.NavigationView
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="start"
+            app:headerLayout="@layout/nav_header_main"
+            app:menu="@menu/activity_main_drawer" />
+    </androidx.drawerlayout.widget.DrawerLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
