--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -58,7 +58,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="¿No tienes contrasena? Registrate"
+        android:text="@string/noRegistrado"
         android:layout_marginBottom="20dp"></TextView>
     <Button
         android:id="@+id/buttonRegistrar"
