--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -22,5 +22,5 @@
         android:layout_height="wrap_content"
         android:paddingTop="16dp"
         android:text="@string/Usuario"
-        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        ></TextView>
 </LinearLayout>
