--- a/app/src/main/res/layout/rutina.xml
+++ b/app/src/main/res/layout/rutina.xml
@@ -32,15 +32,15 @@
             android:layout_marginTop="25dp"
             android:layout_marginStart="30dp"
             android:layout_toEndOf="@id/listImage"/>
+
         <TextView
-            android:layout_width="80dp"
-            android:layout_height="30dp"
             android:id="@+id/listTime"
-            android:text="Repeticiones"
-            android:textSize="16sp"
-            android:layout_toEndOf="@id/listName"
+            android:layout_width="76dp"
+            android:layout_height="42dp"
+            android:layout_marginStart="92dp"
             android:layout_marginTop="25dp"
-            android:layout_marginStart="100dp"
-           />
+            android:layout_toEndOf="@id/listName"
+            android:text="Repeticiones"
+            android:textSize="16sp" />
     </RelativeLayout>
 </androidx.cardview.widget.CardView>
