--- a/app/src/main/res/layout/registro.xml
+++ b/app/src/main/res/layout/registro.xml
@@ -57,7 +57,8 @@
         android:inputType="textPassword"
         android:textColor="@color/black"
         android:textColorHint="@color/black"
-        android:backgroundTint="@color/white" />
+        android:backgroundTint="@color/white"
+        />
 
     <EditText
         android:layout_width="300dp"
@@ -71,23 +72,13 @@
         android:textColorHint="@color/black"
         android:backgroundTint="@color/black" />
 
-    <EditText
-        android:id="@+id/ConfirmarContrasena"
-        android:layout_width="300dp"
-        android:layout_height="60dp"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="20dp"
-        android:hint="País"
-        android:textColor="@color/white"
-        android:textColorHint="@color/black"
-        android:backgroundTint="@color/black" />
 
     <Button
         android:id="@+id/buttonRegistrarse"
         android:layout_width="330dp"
         android:layout_height="70dp"
         android:layout_gravity="center_horizontal"
-        android:text="Registrate"
+        android:text="@string/registrarse"
         android:layout_marginTop="40dp"
         android:backgroundTint="@color/purple_500"
         android:textColor="@color/black"
