--- a/app/src/main/res/layout/inicio.xml
+++ b/app/src/main/res/layout/inicio.xml
@@ -1,26 +1,26 @@
-<?xml version="1.0" encoding="utf-8"?>
+<!-- res/layout/inicio.xml -->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:layoutDescription="@xml/inicio_scene"
-    >
-    <TextView
+    app:layoutDescription="@xml/inicio_scene">
 
+    <TextView
+        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/textView"
         android:layout_centerHorizontal="true"
         android:layout_above="@id/imagenPrincipiante"
         android:layout_marginBottom="80dp"
         android:fontFamily="@font/greek"
         android:text="@string/bienvenido">
     </TextView>
+
     <ImageView
+        android:id="@+id/imagenPrincipiante"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:id="@+id/imagenPrincipiante"
         android:layout_above="@id/botonPrincipiante"
         android:layout_centerHorizontal="true"
         app:srcCompat="@drawable/principiante">
@@ -36,19 +36,20 @@
         android:layout_centerHorizontal="true"
         android:text="PRINCIPIANTE"
         android:layout_marginBottom="20dp"
-        android:fontFamily="@font/greek"
-        ></Button>
+        android:fontFamily="@font/greek">
+    </Button>
+
     <ImageView
+        android:id="@+id/imagenIntermedio"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:id="@+id/imagenIntermedio"
         android:layout_above="@id/botonIntermedio"
         android:layout_centerHorizontal="true"
         app:srcCompat="@drawable/intermedio"
         android:fontFamily="@font/greek">
     </ImageView>
+
     <Button
-        android:layout_marginTop="20dp"
         android:id="@+id/botonIntermedio"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -56,16 +57,18 @@
         android:layout_centerHorizontal="true"
         android:layout_above="@id/imagenAvanzado"
         android:layout_marginBottom="20dp"
-        android:text="INTERMEDIO"></Button>
+        android:text="INTERMEDIO">
+    </Button>
+
     <ImageView
+        android:id="@+id/imagenAvanzado"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:id="@+id/imagenAvanzado"
         android:layout_above="@id/botonAvanzado"
         android:layout_centerHorizontal="true"
-        app:srcCompat="@drawable/avanzado"
-        >
+        app:srcCompat="@drawable/avanzado">
     </ImageView>
+
     <Button
         android:id="@+id/botonAvanzado"
         android:layout_width="wrap_content"
@@ -75,7 +78,14 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
         android:layout_alignParentBottom="true"
-
         android:text="AVANZADO"
-        android:fontFamily="@font/greek"></Button>
+        android:fontFamily="@font/greek">
+    </Button>
+
+    <!-- Contenedor para el fragment -->
+    <FrameLayout
+        android:id="@+id/fragment_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone"/>
 </RelativeLayout>
