intento de anadir menu

--- a/app/src/main/res/layout/row.xml
+++ b/app/src/main/res/layout/row.xml
@@ -14,7 +14,7 @@
         android:id="@+id/circleView"
         android:layout_width="@dimen/image"
         android:layout_height="@dimen/image"
-        android:background="@drawable/circle"/>
+        android:background="@drawable/torch"/>
 
     <TextView
         android:layout_toEndOf="@+id/circleView"
@@ -31,7 +31,6 @@
         android:id="@+id/subtitleTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/titleTextView"
         android:layout_marginStart="180dp"
         android:paddingStart="@dimen/text_row_padding_image"
         />
