--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -30,7 +30,7 @@
         android:id="@+id/editTextUsername"
         android:layout_width="300dp"
         android:layout_height="70dp"
-        android:hint="Usuario"
+        android:hint="Correo electrónico"
         android:textColorHint="@color/black"
         android:textColor="@color/black"
         android:backgroundTint="@color/white"
@@ -40,12 +40,13 @@
         android:id="@+id/editContrasena"
         android:layout_width="300dp"
         android:layout_height="70dp"
-        android:hint="Usuario"
+        android:hint="Contraseña"
         android:textColorHint="@color/black"
         android:textColor="@color/black"
         android:backgroundTint="@color/white"
         android:layout_marginTop="16dp"
-        android:layout_marginBottom="16dp"/>
+        android:layout_marginBottom="16dp"
+        android:password="true"/>
     <Button
         android:id="@+id/buttonEMPEZAR"
         android:layout_width="330dp"
