--- a/app/src/main/res/layout/rutina.xml
+++ b/app/src/main/res/layout/rutina.xml
@@ -17,7 +17,12 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:title="Ejericios" />
+        app:title="Ejercicios"
+        app:titleTextColor="@color/white"
+        app:titleMarginStart="170dp"
+        android:fontFamily="@font/greek_freak" />
+
+    />
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler"
         android:layout_width="match_parent"
