--- a/app/src/main/res/layout/inicio.xml
+++ b/app/src/main/res/layout/inicio.xml
@@ -1,91 +1,119 @@
-<!-- res/layout/inicio.xml -->
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/container"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    app:layoutDescription="@xml/inicio_scene">
+    android:layout_height="match_parent">
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_above="@id/imagenPrincipiante"
-        android:layout_marginBottom="80dp"
-        android:fontFamily="@font/greek"
-        android:text="@string/bienvenido">
-    </TextView>
+        android:layout_marginTop="60dp"
+        android:text="@string/bienvenido"
+        app:layout_constraintBottom_toTopOf="@id/imagenPrincipiante"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.1" />
 
     <ImageView
         android:id="@+id/imagenPrincipiante"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:layout_above="@id/botonPrincipiante"
-        android:layout_centerHorizontal="true"
-        app:srcCompat="@drawable/principiante">
-    </ImageView>
+        android:layout_marginTop="96dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.501"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/textView"
+        app:srcCompat="@drawable/principiante" />
 
     <Button
         android:id="@+id/botonPrincipiante"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:layout_above="@id/imagenIntermedio"
-        android:layout_marginTop="20dp"
-        android:layout_centerHorizontal="true"
         android:text="PRINCIPIANTE"
-        android:layout_marginBottom="20dp"
-        android:fontFamily="@font/greek">
-    </Button>
+        app:layout_constraintTop_toBottomOf="@id/imagenPrincipiante"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintVertical_bias="0.3" />
 
     <ImageView
         android:id="@+id/imagenIntermedio"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:layout_above="@id/botonIntermedio"
-        android:layout_centerHorizontal="true"
         app:srcCompat="@drawable/intermedio"
-        android:fontFamily="@font/greek">
-    </ImageView>
+        app:layout_constraintTop_toBottomOf="@id/botonPrincipiante"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintVertical_bias="0.4" />
 
     <Button
         android:id="@+id/botonIntermedio"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:layout_centerHorizontal="true"
-        android:layout_above="@id/imagenAvanzado"
-        android:layout_marginBottom="20dp"
-        android:text="INTERMEDIO">
-    </Button>
+        android:text="INTERMEDIO"
+        app:layout_constraintTop_toBottomOf="@id/imagenIntermedio"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintVertical_bias="0.5" />
 
     <ImageView
         android:id="@+id/imagenAvanzado"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:layout_above="@id/botonAvanzado"
-        android:layout_centerHorizontal="true"
-        app:srcCompat="@drawable/avanzado">
-    </ImageView>
+        app:srcCompat="@drawable/avanzado"
+        app:layout_constraintTop_toBottomOf="@id/botonIntermedio"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintVertical_bias="0.6" />
 
     <Button
         android:id="@+id/botonAvanzado"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:layout_marginBottom="40dp"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="20dp"
-        android:layout_alignParentBottom="true"
         android:text="AVANZADO"
-        android:fontFamily="@font/greek">
-    </Button>
+        app:layout_constraintTop_toBottomOf="@id/imagenAvanzado"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintVertical_bias="0.7" />
 
-    <!-- Contenedor para el fragment -->
-    <FrameLayout
-        android:id="@+id/fragment_container"
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/nav_view"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="0dp"
+        android:layout_marginEnd="0dp"
+        android:background="?android:attr/windowBackground"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:menu="@menu/bottom_nav_menu" />
+
+    <fragment
+        android:id="@+id/nav_host_fragment_activity_main"
+        android:name="androidx.navigation.fragment.NavHostFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:visibility="gone"/>
-</RelativeLayout>
+        app:defaultNavHost="true"
+        app:layout_constraintBottom_toTopOf="@id/nav_view"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:navGraph="@navigation/mobile_navigation" />
+
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorPrimary"
+        app:titleTextColor="@android:color/white"
+        tools:ignore="MissingConstraints" />
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
