--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -8,18 +8,39 @@
     <fragment
         android:id="@+id/navigation_home"
         android:name="com.example.fitnesscoach.activities.ui.home.HomeFragment"
-        android:label="@string/title_home"
-        tools:layout="@layout/fragment_home" />
+        android:label=""
+        tools:layout="@layout/fragment_home">
+        <action
+            android:id="@+id/action_home_to_dashboard"
+            app:destination="@id/navigation_dashboard" />
+        <action
+            android:id="@+id/action_home_to_notifications"
+            app:destination="@id/navigation_notifications" />
+    </fragment>
 
     <fragment
         android:id="@+id/navigation_dashboard"
         android:name="com.example.fitnesscoach.activities.RecyclerFragment"
-        android:label="@string/title_dashboard"
-        tools:layout="@layout/rutina" />
+        android:label="@string/rutina"
+        tools:layout="@layout/rutina">
+        <action
+            android:id="@+id/action_dashboard_to_notifications"
+            app:destination="@id/navigation_notifications" />
+        <action
+            android:id="@+id/navigation_home"
+            app:destination="@id/navigation_home" />
+    </fragment>
 
     <fragment
         android:id="@+id/navigation_notifications"
         android:name="com.example.fitnesscoach.Ajustes"
-        android:label="@string/title_notifications"
-        tools:layout="@layout/ajustes" />
+        android:label="@string/Ajustes"
+        tools:layout="@layout/ajustes">
+        <action
+            android:id="@+id/action_notifications_to_dashboard"
+            app:destination="@id/navigation_dashboard" />
+        <action
+            android:id="@+id/navigation_home"
+            app:destination="@id/navigation_home" />
+    </fragment>
 </navigation>
