--- a/app/src/main/res/layout/ajustes.xml
+++ b/app/src/main/res/layout/ajustes.xml
@@ -6,13 +6,19 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/foto"
+        android:layout_marginTop="70dp"
+        android:id="@+id/Bienvenido"
+        android:text="@string/Bienvenido"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="50dp"/>
+        android:layout_marginBottom="50dp"
+        android:layout_centerHorizontal="true"
+        android:textSize="35sp"
+        android:textStyle="bold"/>
 
     <ImageView
-        android:layout_below="@+id/foto"
+        android:layout_marginTop="20dp"
+        android:layout_below="@+id/Bienvenido"
         android:id="@+id/imageView2"
         android:layout_width="wrap_content"
         android:layout_height="111dp"
@@ -48,29 +54,25 @@
         android:layout_centerHorizontal="true"
         />
     <EditText
-        android:text="@string/correo_electronico"
+        android:layout_marginTop="10dp"
+        android:hint="@string/nombre_de_usuario"
         android:layout_width="300dp"
-        android:layout_height="70dp"
-        android:id="@+id/correoElectronico"
+        android:layout_height="60dp"
+        android:id="@+id/NombreUser"
         android:layout_below="@+id/ActivarNotificaciones"
         android:layout_centerHorizontal="true"
+        android:textColorHint="@color/black"
         />
     <EditText
-        android:text="@string/nombre_de_usuario"
         android:layout_width="300dp"
-        android:layout_height="70dp"
-        android:id="@+id/NombreUser"
-        android:layout_below="@+id/correoElectronico"
+        android:layout_height="60dp"
         android:layout_centerHorizontal="true"
-        />
-    <EditText
-        android:text="@string/contrasena"
-        android:layout_width="300dp"
-        android:layout_height="70dp"
         android:id="@+id/editContrasena"
+        android:hint="@string/confirmar_pass"
         android:layout_below="@+id/NombreUser"
-        android:layout_centerHorizontal="true"
         android:inputType="textPassword"
-        />
+        android:textColor="@color/black"
+        android:textColorHint="@color/black"
+        android:backgroundTint="@color/black" />
 
 </RelativeLayout>
