--- a/app/src/main/res/layout/ajustes.xml
+++ b/app/src/main/res/layout/ajustes.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:layout_marginTop="70dp"
+        android:layout_marginTop="60dp"
         android:id="@+id/Bienvenido"
         android:text="@string/Bienvenido"
         android:layout_width="wrap_content"
@@ -17,7 +17,7 @@
         android:textStyle="bold"/>
 
     <ImageView
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="1dp"
         android:layout_below="@+id/Bienvenido"
         android:id="@+id/imageView2"
         android:layout_width="wrap_content"
@@ -31,7 +31,7 @@
         android:layout_height="wrap_content"
         android:text="@string/BorrarDatos"
         android:layout_below="@id/imageView2"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="10dp"
         android:layout_centerHorizontal="true"
         />
     <Button
@@ -48,7 +48,7 @@
         android:id="@+id/MostrarDatos"
         android:layout_width="190dp"
         android:layout_height="wrap_content"
-        android:text="@string/Update"
+        android:text="@string/Read"
         android:layout_below="@id/CambiarDatos"
         android:layout_marginTop="10dp"
         android:layout_centerHorizontal="true"
@@ -65,7 +65,7 @@
         />
     <EditText
         android:layout_marginTop="10dp"
-        android:hint="@string/nombre_de_usuario"
+        android:hint="@string/NuevoNombre"
         android:layout_width="300dp"
         android:layout_height="60dp"
         android:id="@+id/NombreUser"
@@ -78,7 +78,7 @@
         android:layout_height="60dp"
         android:layout_centerHorizontal="true"
         android:id="@+id/editContrasena"
-        android:hint="@string/confirmar_pass"
+        android:hint="@string/nuevaContraseña"
         android:layout_below="@+id/NombreUser"
         android:inputType="textPassword"
         android:textColor="@color/black"
