--- a/app/src/main/res/layout/ajustes.xml
+++ b/app/src/main/res/layout/ajustes.xml
@@ -33,6 +33,7 @@
         android:layout_below="@id/imageView2"
         android:layout_marginTop="10dp"
         android:layout_centerHorizontal="true"
+        style="@style/ButtonStyle"
         />
     <Button
         android:id="@+id/CambiarDatos"
@@ -43,6 +44,7 @@
         android:layout_marginTop="10dp"
         android:layout_centerHorizontal="true"
         android:onClick="onViewCreated"
+        style="@style/ButtonStyle"
         />
     <Button
         android:id="@+id/MostrarDatos"
@@ -53,6 +55,7 @@
         android:layout_marginTop="10dp"
         android:layout_centerHorizontal="true"
         android:onClick="onViewCreated"
+        style="@style/ButtonStyle"
         />
     <Button
         android:id="@+id/cambiarFoto"
@@ -62,6 +65,7 @@
         android:layout_below="@id/MostrarDatos"
         android:layout_marginTop="20dp"
         android:layout_centerHorizontal="true"
+        style="@style/ButtonStyle"
         />
     <EditText
         android:layout_marginTop="10dp"
