--- a/app/src/main/res/layout/inicio.xml
+++ b/app/src/main/res/layout/inicio.xml
@@ -9,19 +9,29 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/frame">
+
+    <fragment
+        android:id="@+id/nav_host_fragment_activity_main"
+        android:name="androidx.navigation.fragment.NavHostFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:defaultNavHost="true"
+        app:navGraph="@navigation/mobile_navigation" />
 </FrameLayout>
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="70dp"
         android:text="@string/bienvenido"
         app:layout_constraintBottom_toTopOf="@id/imagenPrincipiante"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.1" />
+        app:layout_constraintVertical_bias="0.1"
+        android:textSize="20dp"
+        android:fontFamily="@font/greek_freak"/>
 
     <ImageView
         android:id="@+id/imagenPrincipiante"
@@ -39,11 +49,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="PRINCIPIANTE"
+        android:text="@string/Bienvenido"
         app:layout_constraintTop_toBottomOf="@id/imagenPrincipiante"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintVertical_bias="0.3" />
+        app:layout_constraintVertical_bias="0.3"
+        style="@style/ButtonStyle"
+        android:fontFamily="@font/greek_freak"/>
 
     <ImageView
         android:id="@+id/imagenIntermedio"
@@ -60,11 +72,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="INTERMEDIO"
+        android:text="@string/intermedio"
         app:layout_constraintTop_toBottomOf="@id/imagenIntermedio"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintVertical_bias="0.5" />
+        app:layout_constraintVertical_bias="0.5"
+        style="@style/ButtonStyle"
+        android:fontFamily="@font/greek_freak"/>
 
     <ImageView
         android:id="@+id/imagenAvanzado"
@@ -81,11 +95,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="AVANZADO"
+        android:text="@string/avanzado"
         app:layout_constraintTop_toBottomOf="@id/imagenAvanzado"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintVertical_bias="0.7" />
+        app:layout_constraintVertical_bias="0.7"
+        style="@style/ButtonStyle"
+        android:fontFamily="@font/greek_freak"/>
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/nav_view"
@@ -98,18 +114,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:menu="@menu/bottom_nav_menu" />
-
-    <fragment
-        android:id="@+id/nav_host_fragment_activity_main"
-        android:name="androidx.navigation.fragment.NavHostFragment"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:defaultNavHost="true"
-        app:layout_constraintBottom_toTopOf="@id/nav_view"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:navGraph="@navigation/mobile_navigation" />
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
