--- a/app/src/main/res/layout/registro.xml
+++ b/app/src/main/res/layout/registro.xml
@@ -23,7 +23,8 @@
         android:text="@string/registrarse"
         android:textSize="35sp"
         android:textStyle="bold"
-        android:textColor="@color/black" />
+        android:textColor="@color/black"
+        android:fontFamily="@font/greek_freak"/>
 
     <EditText
         android:layout_width="300dp"
@@ -34,7 +35,8 @@
         android:hint="@string/nombre_de_usuario"
         android:textColorHint="@color/black"
         android:textColor="@color/black"
-        android:backgroundTint="@color/white" />
+        android:backgroundTint="@color/white"
+        android:fontFamily="@font/greek_freak"/>
 
     <EditText
         android:layout_width="300dp"
@@ -45,7 +47,8 @@
         android:hint="@string/correo_electronico"
         android:textColor="@color/black"
         android:textColorHint="@color/black"
-        android:backgroundTint="@color/white" />
+        android:backgroundTint="@color/white"
+        android:fontFamily="@font/greek_freak"/>
 
     <EditText
         android:id="@+id/passwordEdit"
@@ -57,7 +60,8 @@
         android:inputType="textPassword"
         android:textColor="@color/black"
         android:textColorHint="@color/black"
-        android:backgroundTint="@color/white" />
+        android:backgroundTint="@color/white"
+        android:fontFamily="@font/greek_freak"/>
 
     <EditText
         android:layout_width="300dp"
@@ -69,7 +73,8 @@
         android:inputType="textPassword"
         android:textColor="@color/black"
         android:textColorHint="@color/black"
-        android:backgroundTint="@color/black" />
+        android:backgroundTint="@color/black"
+        android:fontFamily="@font/greek_freak"/>
 
     <EditText
         android:id="@+id/ConfirmarContrasena"
@@ -80,7 +85,8 @@
         android:hint="País"
         android:textColor="@color/white"
         android:textColorHint="@color/black"
-        android:backgroundTint="@color/black" />
+        android:backgroundTint="@color/black"
+        android:fontFamily="@font/greek_freak"/>
 
     <Button
         android:id="@+id/buttonRegistrarse"
@@ -92,6 +98,8 @@
         android:backgroundTint="@color/purple_500"
         android:textColor="@color/black"
         android:onClick="btnRegistrar"
-        style="@style/ButtonStyle"/>
+        style="@style/ButtonStyle"
+        android:fontFamily="@font/greek_freak"
+        android:textSize="30dp"/>
 
 </LinearLayout>
