--- a/app/src/main/res/layout/inicio.xml
+++ b/app/src/main/res/layout/inicio.xml
@@ -18,30 +18,16 @@
         app:defaultNavHost="true"
         app:navGraph="@navigation/mobile_navigation" />
 </FrameLayout>
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="70dp"
-        android:text="@string/bienvenido"
-        app:layout_constraintBottom_toTopOf="@id/imagenPrincipiante"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.1"
-        android:textSize="20dp"
-        android:fontFamily="@font/greek_freak"/>
 
     <ImageView
         android:id="@+id/imagenPrincipiante"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:layout_marginTop="96dp"
+        android:layout_marginTop="100dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textView"
+        app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/principiante" />
 
     <Button
@@ -121,7 +107,13 @@
         android:layout_height="?attr/actionBarSize"
         android:background="?attr/colorPrimary"
         app:titleTextColor="@android:color/white"
-        tools:ignore="MissingConstraints" />
+        tools:ignore="MissingConstraints"
+        app:title="@string/Bienvenido"
+        android:fontFamily="@font/greek_freak"
+        android:gravity="center"
+        android:theme="?attr/actionBarTheme"
+
+        />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
