--- a/app/src/main/res/layout/ajustes.xml
+++ b/app/src/main/res/layout/ajustes.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:layout_marginTop="60dp"
+        android:layout_marginTop="70dp"
         android:id="@+id/Bienvenido"
         android:text="@string/Bienvenido"
         android:layout_width="wrap_content"
@@ -37,8 +37,8 @@
         android:layout_marginTop="5dp"
         android:layout_marginEnd="5dp"
         android:layout_marginBottom="5dp"
-        android:text="@string/BorrarDatos"
-        android:fontFamily="@font/greek_freak"/>
+        android:fontFamily="@font/greek_freak"
+        android:text="@string/BorrarDatos" />
 
     <Button
         android:id="@+id/CambiarDatos"
