--- a/app/src/main/res/menu/toolbar_menu.xml
+++ b/app/src/main/res/menu/toolbar_menu.xml
@@ -2,8 +2,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <item android:id="@+id/camaraicon"
-    android:icon="@drawable/ic_home_black_24dp"
+    <item android:id="@+id/pesaIcon"
+    android:icon="@drawable/dumbbell"
     android:title="Camara"
     app:showAsAction="ifRoom"/>
 </menu>
