Navegación vuelve a funcionar

--- a/app/src/main/res/menu/toolbar_menu.xml
+++ b/app/src/main/res/menu/toolbar_menu.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item android:id="@+id/camaraicon"
-    android:icon="@drawable/ic_home_black_24dp"
+    android:icon="@drawable/muscle"
     android:title="Camara"
     app:showAsAction="ifRoom"/>
 </menu>
