--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -3,13 +3,13 @@
 
     <item
         android:id="@+id/navigation_home"
-        android:icon="@drawable/ic_home_black_24dp"
+        android:icon="@drawable/home"
         android:title="@string/Inicio"
         android:fontFamily="@font/greek_freak"/>
 
     <item
         android:id="@+id/navigation_dashboard"
-        android:icon="@drawable/images"
+        android:icon="@drawable/muscle"
         android:title="@string/Ejercicios"
         android:fontFamily="@font/greek_freak"/>
 
