--- a/app/src/main/res/layout/camera.xml
+++ b/app/src/main/res/layout/camera.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activities.Camera">
+    tools:context=".activities.CameraActivity">
 
     <androidx.camera.view.PreviewView
         android:id="@+id/viewFinder"
