Cambios en la base de datos

--- a/app/src/main/res/layout/login.xml
+++ b/app/src/main/res/layout/login.xml
@@ -31,7 +31,18 @@
         android:id="@+id/editTextUsername"
         android:layout_width="300dp"
         android:layout_height="70dp"
-        android:hint="Correo electrónico"
+        android:hint="@string/Nombre"
+        android:textColorHint="@color/black"
+        android:textColor="@color/black"
+        android:backgroundTint="@color/white"
+        android:layout_marginTop="16dp"
+        android:layout_marginBottom="16dp"
+        android:fontFamily="@font/greek_freak"/>
+    <EditText
+        android:id="@+id/editTextCorreo"
+        android:layout_width="300dp"
+        android:layout_height="70dp"
+        android:hint="@string/correo_electronico"
         android:textColorHint="@color/black"
         android:textColor="@color/black"
         android:backgroundTint="@color/white"
